RavenDB-13155 layout issue in ongoing tasks

--- a/src/Raven.Studio/wwwroot/Content/css/pages/ongoing-tasks.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/ongoing-tasks.less
@@ -7,7 +7,7 @@
             }
         }
     }
-    
+
     .align-checkboxes {
         margin-left: 37px;
     }
@@ -52,6 +52,12 @@
 
     .backup-now {
         pointer-events: all;
+    }
+
+    .subscription {
+        .list-properties .property-item .property-name {
+            min-width: 230px;
+        }
     }
 
     .etl-progress {
