--- a/src/Raven.Studio/wwwroot/Content/css/styles-common.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common.less
@@ -1430,6 +1430,10 @@ input[type=file] + .form-control {
                 .property-name {
                     min-width: 200px;
                 }
+
+                .property-value {
+                    flex-grow: 1;
+                }
             }
         }
 
